# sipcore

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: sipmsg.yml  sipmsg_no_std.yml
crates/sipmsg/: Cargo.toml  LICENSE  README.md
crates/sipmsg/src/: bnfcore.rs  errorparse.rs  header.rs  headers.rs  hostport.rs  lib.rs  message.rs  parameters.rs  parserhelpers.rs  request.rs  response.rs  serializer.rs  sipuri.rs  traits.rs  userinfo.rs
crates/sipmsg/src/common/: errorparse.rs  helpers.rs  hostport.rs  mod.rs  nom_wrappers.rs  sip_method.rs  sipuri.rs  take_sws_token.rs  traits.rs
crates/sipmsg/src/headers/: accept_encoding_header.rs  accept_header.rs  accept_language_header.rs  alertinfo_header.rs  allow_header.rs  auth_params.rs  extension_header.rs  generic_params.rs  header.rs  headers.rs  mod.rs  name_addr.rs  parameters.rs  rfcheader.rs  sipuri.rs  traits.rs
crates/sipmsg/src/headers/parsers/: accept.rs  accept_encoding.rs  accept_language.rs  alertinfo.rs  allow.rs  auth_param.rs  authentication_info.rs  authorization.rs  call_info.rs  callid.rs  contact.rs  content_disposition.rs  cseq.rs  date.rs  digit_header.rs  extension.rs  from.rs  mime_version.rs  mod.rs  retry_after.rs  timestamp.rs  token_header.rs  user_agent.rs  utf8_trim_header.rs  via.rs  warning.rs
crates/sipmsg/tests/: benchmark.rs  common.rs  header.rs  headers.rs  message.rs  request.rs  response.rs  rfc4475.rs
src/: lib.rs
