[package]
name = "sipcore"
version = "0.0.1"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]
edition = "2018"
description = "Rust framework for creating SIP applications"
license = "MIT"
repository = "https://github.com/armatusmiles/sipcore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sipmsg = { version = "0.1.0", path = "crates/sipmsg" }

[workspace]
members = [
    "crates/sipmsg"
]