[package]
name = "sipmsg"
version = "0.2.0"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]
edition = "2018"
description = "SIP message parser"
license = "MIT"
keywords = ["sip", "parser", "no_std"]
repository = "https://github.com/armatusmiles/sipcore"
categories = ["no-std"]

[dependencies]
nom = "6.0.0-alpha2"

[dependencies.unicase]
version ="^2.6"
default-features = false
